--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,20 +16,27 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - hatch-jupyter-builder >=0.5
+    - hatch-nodejs-version
+    - hatchling >=1.5.0
+    - jupyterlab =4
     - pip
-    - jupyterlab >=3.0.0
-    - jupyter-packaging >=0.7.9,<0.8.0
+    - python >=3.8,<4.0
   run:
-    - python >=3.6
+    - python >=3.8
     - jupyterlab >=3.0.0
 
 test:
+  requires:
+    - jupyterlab =4
+    - pip
   commands:
+    - pip check
+    - jupyter labextension list
     - jupyter labextension list 2>&1 | grep -ie "@lckr/jupyterlab_variableinspector.*OK.*(python, lckr_jupyterlab_variableinspector)"
 
 about:
-  home: https://github.com/lckr/jupyterlab-variableInspector
+  home: https://github.com/jupyterlab-contrib/jupyterlab-variableInspector
   license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
